# smart_asset_tracker

./: CMakeLists.txt  README.md  README.rst  prj.conf
boards/: alertrax51_nrf9151_ns.conf  nrf52840dk_nrf52840.overlay  nrf9151dk_nrf9151.overlay  nrf9151dk_nrf9151_ns.overlay
boards/alertrax/alertrax/: Kconfig.alertrax51  Kconfig.alertrax60  Kconfig.alertrax61  Kconfig.defconfig  alertrax51_nrf9151.dts  alertrax51_nrf9151.yaml  alertrax51_nrf9151_defconfig  alertrax51_nrf9151_ns.dts  alertrax51_nrf9151_ns.yaml  alertrax51_nrf9151_ns_defconfig  alertrax60_nrf9160.dts  alertrax60_nrf9160.yaml  alertrax60_nrf9160_defconfig  alertrax60_nrf9160_ns.dts  alertrax60_nrf9160_ns.yaml  alertrax60_nrf9160_ns_defconfig  alertrax61_nrf9161.dts  alertrax61_nrf9161.yaml  alertrax61_nrf9161_defconfig  alertrax61_nrf9161_ns.dts  alertrax61_nrf9161_ns.yaml  alertrax61_nrf9161_partition_conf.dtsi  alertrax_common-pinctrl.dtsi  alertrax_common.dtsi  board.cmake  board.yml
components/ILI9341_display/: ili9341_display.c  ili9341_display.h
components/WiFi/: wifi.c  wifi.h
components/ext_flash/: max25r16.c  max25r16.h
components/lis2dh/: lis2dh.c  lis2dh.h
components/sht4x/: sht4x.c  sht4x.h
components/voltage_monitor/: voltage_monitor.c  voltage_monitor.h
hex_file/: zephyr.hex
src/: main.c
